# JobOracle

./: .env.example  .gitignore  README.md  __init__.py  agents.py  chainlit-test-cases.md  cli.py  config.py  llm_client.py  main.py  models.py  offerstar_crawler.py  prompts.py  pyproject.toml  report_writer.py  search.py  service.py
.chainlit/: config.toml
plan/: chainlit-ui-plan.md  memory-conversation-plan.md  tui-plan.md
public/: joboracle.css
src/: __init__.py
src/JobOracle/: __init__.py  agents.py  chat_service.py  cli.py  config.py  conversation.py  llm_client.py  main.py  models.py  offerstar_crawler.py  profile.py  prompts.py  report_writer.py  search.py  service.py
src/JobOracle/memory/: __init__.py  extractor.py  manager.py  models.py  store.py  summarizer.py
src/JobOracle/ui/: __init__.py  chainlit_app.py
