[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joboracle"
version = "0.1.0"
description = "It is a multi-agent tool for job market analysis and employment guidance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chainlit>=2.0.0",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
